--- a/book_ot.html
+++ b/book_ot.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Blank Page - Brand</title>
+    <title>Book OT</title>
     <meta name="theme-color" content="#4e73df">
     <meta name="author" content="SRKP Technologies">
     <meta name="description" content="Doctor Appointment Booking">
